--- a/web/0904-trabajo-final/form.html
+++ b/web/0904-trabajo-final/form.html
@@ -4,15 +4,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario</title>
-</head>
-<body>
-    <nav class="navbar bg-light">
-        <form class="container-fluid justify-content-start">
-          <button class="btn btn-outline-success me-2" type="button">Main button</button>
-          <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button>
-        </form>
-      </nav> 
+    <title>Momento 3 | Formulario</title>
+    <script src="./js/nav.js"></script>
+    <script src="./js/funciones.js"></script>
+
+    <link rel="stylesheet" href="./css/style.css">
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</head>
+<body class="body-form">
+
+  <div class="container mb-4">
+
+    <div class="header-form">
+      <h1 class="mt-4">Validación formulario</h1>
+      <h5>Por: Alba Luz Saldarriaga Taborda</h5>
+    </div>
+
+    <div class="container form-container">
+        
+      <form 
+        onsubmit="enviar(event)" 
+        onclick="limpiarErrores()" 
+        action="maito:correofalso@mail.com"
+      >
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre">
+            <div class="form-text">El nombre debe tener más de un caracter</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="apellido" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="apellido">
+            <div class="form-text">El apellido debe tener más de un caracter</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="edad" class="form-label">Edad</label>
+            <input type="number" class="form-control" id="edad">
+            <div class="form-text">La edad debe estar entre 0 y 120 años</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="direccion" class="form-label">Dirección</label>
+            <input type="text" class="form-control" id="direccion">
+            <div class="form-text">Este campo debe tener mínimo 10 caracteres</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input type="text" class="form-control" id="email">
+            <div class="form-text">Digite un correo electrónico válido</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="fecha-nacimiento" class="form-label">Fecha de nacimiento</label>
+            <input type="date" class="form-control" id="fecha-nacimiento">
+            <div id="emailHelp" class="form-text">Digite su fecha de nacimiento</div>
+          </div>
+
+          <label class="form-label">Sexo</label>
+          <div class="d-flex mb-3">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="sexo" id="sexo-f" value="f">
+              <label class="form-check-label" for="sexo-f">
+                Femenino
+              </label>
+            </div>
+            <div class="form-check" style="margin-left: 15px;">
+              <input class="form-check-input" type="radio" name="sexo" id="sexo-m" value="m">
+              <label class="form-check-label" for="sexo-m">
+                Masculino
+              </label>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="telefono" class="form-label">Teléfono</label>
+            <input type="number" class="form-control" id="telefono">
+            <div class="form-text">El número telefónico debe ser de 10 dígitos</div>
+          </div>
+
+          <div class="alert alert-danger" id="mensaje-error" role="alert">
+            <ul id="lista-errores"></ul>
+          </div>
+
+          <input type="submit" class="btn btn-primary" value="Enviar">
+
+      </form>
+    </div>
+
+    <div class="modal fade" id="modal-datos" tabindex="-1" aria-labelledby="modal-datosLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-datosLabel">Datos</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="datos"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
 </body>
 </html>
